--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -1,27 +1,39 @@
+
 @font-face {
-  font-family: "Brandon";
-  src: url("/themes/cifq/assets/public/fonts/BrandonText-Medium.woff2") format("woff2"),
-         url("/themes/cifq/assets/public/fonts/BrandonText-Medium.woff") format("woff");
-  font-style: normal;
-  font-weight: 500;
- }
-
- @font-face {
-  font-family: "Brandon";
-  src: url("/themes/cifq/assets/public/fonts/BrandonText-Bold.woff2") format("woff2"),
-         url("/themes/cifq/assets/public/fonts/BrandonText-Bold.woff") format("woff");
-  font-style: normal;
-  font-weight: 600;
- }
-
- @font-face {
-  font-family: "Brandon";
-  src: url("/themes/cifq/assets/public/fonts/BrandonText-Black.woff2") format("woff2"),
-         url("/themes/cifq/assets/public/fonts/BrandonText-Black.woff") format("woff");
+  font-family: 'Brandon';
+  src: url('/themes/cifq/assets/public/fonts/BrandonText-Black.woff'); /* IE9 Compat Modes */
+  src: url('/themes/cifq/assets/public/fonts/BrandonText-Black.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Black.woff') format('woff'), /* Modern Browsers */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Black.woff2') format('woff2'), /* Modern Browsers */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Black.ttf')  format('truetype'), /* Safari, Android, iOS */;
 
   font-style: normal;
-  font-weight: 700;
- }
+  font-weight:  900;
+}
+
+@font-face {
+  font-family: 'Brandon';
+  src: url('/themes/cifq/assets/public/fonts/BrandonText-Bold.woff'); /* IE9 Compat Modes */
+  src: url('/themes/cifq/assets/public/fonts/BrandonText-Bold.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Bold.woff') format('woff'), /* Modern Browsers */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Bold.woff2') format('woff2'), /* Modern Browsers */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Bold.ttf')  format('truetype'), /* Safari, Android, iOS */;
+
+  font-style:   normal;
+  font-weight:  400;
+}
+
+@font-face {
+  font-family: 'Brandon';
+  src: url('/themes/cifq/assets/public/fonts/BrandonText-Light.woff'); /* IE9 Compat Modes */
+  src: url('/themes/cifq/assets/public/fonts/BrandonText-Light.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Light.woff') format('woff'), /* Modern Browsers */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Light.woff2') format('woff2'), /* Modern Browsers */
+       url('/themes/cifq/assets/public/fonts/BrandonText-Light.ttf')  format('truetype'), /* Safari, Android, iOS */;
+
+  font-style:   normal;
+  font-weight:  300;
+}
 
  @font-face {
   font-family: "Plantin";
