--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -66,6 +66,11 @@
     letter-spacing: 1.25px;
 
 
+    .green-block{
+      font-size: 1.5em;
+      line-height: 51px;
+    }
+
     img{
       max-width: 100%;
     }
@@ -273,16 +278,19 @@
 
           h1{
             color:black;
-            font-size: 20px;
             text-align:left;
             font-family: Brandon;
+            font-style: normal;
+            font-weight: 300;
+            font-size:1em;
           }
 
           p{
             color:white;
             text-align: left;
-            font-size: 14px;
             font-family: Brandon;
+            font-weight: 300;
+            font-size:0.7em;
           }
         }
 
@@ -297,8 +305,10 @@
           background-color: $c-graydark;
 
           .quiz-btn-text{
-            font-size: 20px;
+            font-size: 0.8em;
             font-family: Brandon;
+            font-style:   normal;
+            font-weight:  400;
           }
 
           a{
