--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -335,6 +335,14 @@
 
           .why-container{
             padding-bottom:30px;
+
+            .line{
+              background-color: white;
+              width: 30%;
+              height: 2px;
+              padding-top: 2;
+              margin-top: 30px;
+            }
           }
 
           .why{
