--- a/themes/cifq/assets/src/stylesheets/components/_config.scss
+++ b/themes/cifq/assets/src/stylesheets/components/_config.scss
@@ -44,7 +44,7 @@ $container-max-width: 1136px;
 
 
 // Grid
-$grid-margins: 1.4%;
+$grid-margins: 2vw;
 $grid-sizes: (
 	// Grid width options
 	// Add/remove grid's as needed
