--- a/themes/cifq/assets/compiled/app.css
+++ b/themes/cifq/assets/compiled/app.css
@@ -661,14 +661,14 @@ th {
 }
 
 .row {
-  margin-left: -1.4%;
-  margin-right: -1.4%;
+  margin-left: -2vw;
+  margin-right: -2vw;
 }
 
 .grid-fourth, .grid-third, .grid-half, .grid-two-thirds, .grid-three-fourths, .grid-full, .grid-dynamic {
   float: left;
-  padding-left: 1.4%;
-  padding-right: 1.4%;
+  padding-left: 2vw;
+  padding-right: 2vw;
   width: 100%;
 }
 
