--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -118,6 +118,12 @@ body {
   text-align: center;
 }
 
+@media screen and (max-width: 600px) {
+  #page-nosforets .header > .container .signature {
+    margin-right: -11vw;
+  }
+}
+
 #page-nosforets .header > .container .intro {
   width: 80%;
   margin: auto;
@@ -161,12 +167,13 @@ body {
 }
 
 #page-nosforets .content.intro {
-  padding-top: 60px;
+  padding: 4vw 0;
   color: #6a6a6a;
   text-align: center;
   font-size: 28px;
   font-family: Plantin;
   letter-spacing: normal;
+  background-size: cover;
 }
 
 #page-nosforets .content.intro h1 {
@@ -175,11 +182,33 @@ body {
   font-family: Brandon;
   color: #84c425;
   line-height: 1.15;
+  padding: 0;
+}
+
+@media screen and (max-width: 600px) {
+  #page-nosforets .content.intro h1 {
+    font-size: 30px;
+    line-height: 1.1;
+  }
 }
 
 #page-nosforets .content.intro p {
   line-height: 1.143;
   padding: 0 5vw;
+  margin: 0;
+}
+
+@media screen and (max-width: 600px) {
+  #page-nosforets .content.intro p {
+    font-size: 16px;
+    padding: 0;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #page-nosforets .content.intro p .collectif-logo {
+    max-width: 40%;
+  }
 }
 
 #page-nosforets .content.intro h2 {
@@ -188,10 +217,6 @@ body {
   font-style: italic;
   font-size: 28px;
   font-family: 'Plantin Std', sans-serif;
-}
-
-#page-nosforets .content.intro .collectif-logo {
-  padding-bottom: 50px;
 }
 
 #page-nosforets .content.intro .list {
@@ -271,7 +296,7 @@ body {
 }
 
 #page-nosforets .content.green-block {
-  padding: 57px 0 77px;
+  padding: 4vw 0 4vw;
   background-color: #84c425;
   text-align: center;
   font-size: 26px;
@@ -279,8 +304,25 @@ body {
   z-index: 9;
 }
 
+@media screen and (max-width: 1024px) {
+  #page-nosforets .content.green-block .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+  #page-nosforets .content.green-block .container .grid-third {
+    width: 100%;
+  }
+}
+
 #page-nosforets .content.green-block .green-block-knowledge {
   padding-top: 60px;
+}
+
+@media screen and (max-width: 1024px) {
+  #page-nosforets .content.green-block .green-block-knowledge {
+    padding-top: 0px;
+  }
 }
 
 #page-nosforets .content.green-block .green-block-knowledge h1 {
@@ -292,16 +334,36 @@ body {
   font-size: 1em;
 }
 
+@media screen and (max-width: 1024px) {
+  #page-nosforets .content.green-block .green-block-knowledge h1 {
+    text-align: center;
+  }
+}
+
 #page-nosforets .content.green-block .green-block-knowledge p {
   color: white;
   text-align: left;
   font-family: Brandon;
   font-weight: 300;
   font-size: 0.7em;
+  margin: 0;
+}
+
+@media screen and (max-width: 1024px) {
+  #page-nosforets .content.green-block .green-block-knowledge p {
+    text-align: center;
+    margin-bottom: 30px;
+  }
 }
 
 #page-nosforets .content.green-block .green-block-quiz-wrapper {
   padding-top: 81px;
+}
+
+@media screen and (max-width: 1024px) {
+  #page-nosforets .content.green-block .green-block-quiz-wrapper {
+    padding-top: 0px;
+  }
 }
 
 #page-nosforets .content.green-block .quiz-btn {
@@ -321,8 +383,11 @@ body {
   letter-spacing: normal;
 }
 
-#page-nosforets .content.green-block .quiz-btn img {
-  background: transparent;
+#page-nosforets .content.green-block .quiz-btn .arrow-next-icon {
+  width: 42px;
+  height: 30px;
+  display: flex;
+  align-self: center;
 }
 
 #page-nosforets .content.form {
@@ -389,7 +454,7 @@ body {
 
 #page-nosforets .content.form .container .why-container .line {
   background-color: white;
-  width: 50%;
+  width: 30vw;
   height: 2px;
   padding-top: 2;
   margin-top: 30px;
