--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -85,6 +85,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 100% 50%;
+  background-attachment: fixed;
   font-size: 20px;
 }
 
@@ -393,6 +394,8 @@ body {
 #page-nosforets .content.form {
   background-size: cover;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 
 @media screen and (max-width: 800px) {
