--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -760,4 +760,127 @@ body {
   border-color: #7b7b7b;
 }
 
+#page-nosforets .Medias__swiper-container {
+  position: relative;
+}
+
+#page-nosforets .Medias__swiper-slide {
+  display: flex;
+  align-items: center;
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 931px;
+  background-size: cover;
+  background-position: 50% 50%;
+}
+
+#page-nosforets .Medias__swiper-slide-mask {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.65) 0%, rgba(0, 0, 0, 0) 100%);
+  z-index: 0;
+}
+
+#page-nosforets .Medias__swiper-slide-content {
+  max-width: 60%;
+  padding-left: 180px;
+  z-index: 1;
+  letter-spacing: 1.5px;
+}
+
+#page-nosforets .Medias__swiper-slide-content-quote {
+  position: relative;
+  margin-bottom: 48px;
+  color: #fff;
+  font-size: 54px;
+  font-family: Brandon;
+  font-weight: 900;
+  line-height: 68px;
+}
+
+#page-nosforets .Medias__swiper-slide-content-quote span {
+  position: absolute;
+  color: #84c425;
+  font-style: italic;
+  font-weight: 300;
+  font-style: italic;
+  font-size: 76px;
+}
+
+#page-nosforets .Medias__swiper-slide-content-quote span.-start {
+  top: -16px;
+  left: -58px;
+}
+
+#page-nosforets .Medias__swiper-slide-content-quote span.-end {
+  position: relative;
+  top: 3px;
+  right: -14px;
+}
+
+#page-nosforets .Medias__swiper-slide-content-name {
+  margin-bottom: 16px;
+  color: #fff;
+  font-size: 35px;
+  font-family: Brandon;
+  font-weight: 900;
+  font-style: italic;
+}
+
+#page-nosforets .Medias__swiper-slide-content-description {
+  max-width: 70%;
+  color: #fff;
+  font-size: 26px;
+  font-family: Brandon;
+  font-weight: 300;
+  line-height: 36px;
+}
+
+#page-nosforets .Medias__swiper-slide-content-play {
+  width: inherit;
+  max-width: inherit;
+  display: flex;
+  margin-top: 36px;
+  align-items: center;
+  text-transform: none;
+  text-decoration: none;
+  font-size: 22px;
+  font-family: Plantin;
+  font-style: italic;
+  letter-spacing: 0.5px;
+  color: #fff;
+}
+
+#page-nosforets .Medias__swiper-slide-content-play .Header__play-btn {
+  margin: 0;
+  margin-left: 12px;
+}
+
+#page-nosforets .Medias__swiper-button-prev,
+#page-nosforets .Medias__swiper-button-next {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 1;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+#page-nosforets .Medias__swiper-button-prev.swiper-button-disabled,
+#page-nosforets .Medias__swiper-button-next.swiper-button-disabled {
+  opacity: 0;
+  cursor: default;
+}
+
+#page-nosforets .Medias__swiper-button-prev {
+  left: 20px;
+}
+
+#page-nosforets .Medias__swiper-button-next {
+  right: 20px;
+}
+
 /*# sourceMappingURL=foret.css.map */
