--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -87,6 +88,7 @@ body {
   background-position: 100% 50%;
   background-attachment: fixed;
   font-size: 20px;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 1760px) {
@@ -374,6 +376,12 @@ body {
   text-decoration: none;
 }
 
+@media screen and (max-width: 1024px) {
+  #page-nosforets .content.green-block .quiz-btn {
+    padding: 15px 30px 15px 40px;
+  }
+}
+
 #page-nosforets .content.green-block .quiz-btn .quiz-btn-text {
   font-size: 20px;
   font-family: Brandon;
@@ -396,6 +404,8 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-position: center;
+  width: 100%;
+  height: 100%;
 }
 
 @media screen and (max-width: 800px) {
@@ -762,6 +772,7 @@ body {
 
 #page-nosforets .Medias__swiper-container {
   position: relative;
+  overflow: hidden;
 }
 
 #page-nosforets .Medias__swiper-slide {
@@ -791,6 +802,14 @@ body {
   letter-spacing: 1.5px;
 }
 
+@media only screen and (max-width: 1024px) {
+  #page-nosforets .Medias__swiper-slide-content {
+    max-width: 70%;
+    padding: 0;
+    margin: 0 auto;
+  }
+}
+
 #page-nosforets .Medias__swiper-slide-content-quote {
   position: relative;
   margin-bottom: 48px;
@@ -801,24 +820,38 @@ body {
   line-height: 68px;
 }
 
-#page-nosforets .Medias__swiper-slide-content-quote span {
-  position: absolute;
+#page-nosforets .Medias__swiper-slide-content-quote .quote::before, #page-nosforets .Medias__swiper-slide-content-quote .quote::after {
+  font-size: 8vw;
+  font-family: Brandon;
+  font-weight: 300;
   color: #84c425;
   font-style: italic;
-  font-weight: 300;
-  font-style: italic;
-  font-size: 76px;
+  line-height: 0.4;
 }
 
-#page-nosforets .Medias__swiper-slide-content-quote span.-start {
-  top: -16px;
-  left: -58px;
+#page-nosforets .Medias__swiper-slide-content-quote .quote::before {
+  content: '«';
+  transform: translateX(-150%);
+  position: absolute;
 }
 
-#page-nosforets .Medias__swiper-slide-content-quote span.-end {
+#page-nosforets .Medias__swiper-slide-content-quote .quote::after {
+  content: '»';
+  left: 10px;
   position: relative;
-  top: 3px;
-  right: -14px;
+}
+
+@media only screen and (max-width: 1024px) {
+  #page-nosforets .Medias__swiper-slide-content-quote {
+    font-size: 38px;
+    line-height: 1.2;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #page-nosforets .Medias__swiper-slide-content-quote {
+    font-size: 28px;
+  }
 }
 
 #page-nosforets .Medias__swiper-slide-content-name {
@@ -830,6 +863,19 @@ body {
   font-style: italic;
 }
 
+@media only screen and (max-width: 1024px) {
+  #page-nosforets .Medias__swiper-slide-content-name {
+    font-size: 30px;
+    line-height: normal;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #page-nosforets .Medias__swiper-slide-content-name {
+    font-size: 24px;
+  }
+}
+
 #page-nosforets .Medias__swiper-slide-content-description {
   max-width: 70%;
   color: #fff;
@@ -837,6 +883,19 @@ body {
   font-family: Brandon;
   font-weight: 300;
   line-height: 36px;
+}
+
+@media only screen and (max-width: 1024px) {
+  #page-nosforets .Medias__swiper-slide-content-description {
+    font-size: 24px;
+    line-height: 1.3;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  #page-nosforets .Medias__swiper-slide-content-description {
+    font-size: 20px;
+  }
 }
 
 #page-nosforets .Medias__swiper-slide-content-play {
@@ -859,8 +918,16 @@ body {
   margin-left: 12px;
 }
 
+@media only screen and (max-width: 1024px) {
+  #page-nosforets .Medias__swiper-slide-content-play .Header__play-btn {
+    font-size: 16px;
+    line-height: normal;
+  }
+}
+
 #page-nosforets .Medias__swiper-button-prev,
 #page-nosforets .Medias__swiper-button-next {
+  max-width: 5vw;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
