--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -118,6 +118,7 @@ body {
       background-position: 100% 50%;
       background-attachment: fixed;
       font-size: 20px;
+      overflow: hidden;
 
       @media screen and (max-width: 1760px) {
         background-position: 70% 50%;
@@ -376,6 +377,9 @@ body {
           padding: 15px 30px 15px 70px;
           background-color: $c-graydark;
           text-decoration: none;
+          @media screen and (max-width: 1024px) {
+            padding: 15px 30px 15px 40px;
+          }
 
           .quiz-btn-text{
             font-size: 20px;
@@ -404,7 +408,8 @@ body {
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center;
-
+        width: 100%;
+        height: 100%;
 
         @media screen and (max-width: $mobile-form-breakpoint) {
           .grid-half{
@@ -746,7 +751,8 @@ body {
 
 
   .Medias__swiper-container {
-	  position: relative;
+    position: relative;
+    overflow: hidden;
   }
 
   .Medias__swiper-slide {
@@ -774,7 +780,11 @@ body {
     padding-left: 180px;
     z-index: 1;
     letter-spacing: 1.5px;
-    // max-screen(desktop);
+    @media only screen and (max-width:1024px) {
+      max-width: 70%;
+      padding: 0;
+      margin: 0 auto;
+    }
   }
 
   .Medias__swiper-slide-content-quote {
@@ -785,27 +795,61 @@ body {
     font-family: Brandon;
     font-weight: 900;
     line-height: 68px;
+    .quote {
+
+      &::before,
+      &::after {
+        font-size: 8vw;
+        font-family: Brandon;
+        font-weight: 300;
+        color: #84c425;
+        font-style: italic;
+        line-height: 0.4;
+      } 
+
+      &::before {
+        content: '«';
+        transform: translateX(-150%);
+        position: absolute;
+      }
+
+      &::after {
+        content: '»';
+        left: 10px;
+        position: relative;
+      }
+    }
+    @media only screen and (max-width:1024px) {
+      font-size: 38px;
+      line-height: 1.2;
+    }
+
+    @media only screen and (max-width:768px) {
+      font-size: 28px;
+    }
   }
 
-  .Medias__swiper-slide-content-quote span {
-    position: absolute;
-    color: #84c425;
-    font-style: italic;
-    font-weight: 300;
-    font-style: italic;
-    font-size: 76px;
-  }
+  // .Medias__swiper-slide-content-quote span.-start,
+  // .Medias__swiper-slide-content-quote span.-end {
+  //   position: absolute;
+  //   color: #84c425;
+  //   font-style: italic;
+  //   font-weight: 300;
+  //   font-style: italic; 
+  //   font-size: 76px;
+  //   line-height: 0.01;
+  // }
 
-  .Medias__swiper-slide-content-quote span.-start {
-    top: -16px;
-    left: -58px;
-  }
+  // .Medias__swiper-slide-content-quote span.-start {
+  //   top: -16px;
+  //   left: -58px;
+  // }
 
-  .Medias__swiper-slide-content-quote span.-end {
-    position: relative;
-    top: 3px;
-    right: -14px;
-  }
+  // .Medias__swiper-slide-content-quote span.-end {
+  //   position: relative;
+  //   top: 3px;
+  //   right: -14px;
+  // }
 
   .Medias__swiper-slide-content-name {
     margin-bottom: 16px;
@@ -814,6 +858,14 @@ body {
     font-family: Brandon;
     font-weight: 900;
     font-style: italic;
+    @media only screen and (max-width:1024px) {
+      font-size: 30px;
+      line-height: normal;
+    }
+
+    @media only screen and (max-width:768px) {
+      font-size: 24px;
+    }
   }
 
   .Medias__swiper-slide-content-description {
@@ -823,6 +875,14 @@ body {
     font-family: Brandon;
     font-weight: 300;
     line-height: 36px;
+    @media only screen and (max-width:1024px) {
+      font-size: 24px;
+      line-height: 1.3;
+    }
+
+    @media only screen and (max-width:768px) {
+      font-size: 20px;
+    }
   }
 
   .Medias__swiper-slide-content-play {
@@ -841,11 +901,16 @@ body {
     .Header__play-btn {
       margin: 0;
       margin-left: 12px;
+      @media only screen and (max-width:1024px) {
+        font-size: 16px;
+        line-height: normal;
+      }
     }
   }
 
   .Medias__swiper-button-prev,
   .Medias__swiper-button-next {
+    max-width: 5vw;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
