--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -187,11 +187,16 @@ body {
         }
       }
 
-      * { box-sizing: border-box; }
+
         .video-background {
           background: #000;
           top: 0; right: 0; bottom: 0; left: 0;
           z-index: -99;
+
+          @media screen and (max-width: 1080px) {
+            display: none;
+          }
+
         }
         .video-foreground,
         .video-background iframe {
