--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -826,30 +826,9 @@ body {
 
     @media only screen and (max-width:768px) {
       font-size: 28px;
+      line-height: 1.1;
     }
   }
-
-  // .Medias__swiper-slide-content-quote span.-start,
-  // .Medias__swiper-slide-content-quote span.-end {
-  //   position: absolute;
-  //   color: #84c425;
-  //   font-style: italic;
-  //   font-weight: 300;
-  //   font-style: italic; 
-  //   font-size: 76px;
-  //   line-height: 0.01;
-  // }
-
-  // .Medias__swiper-slide-content-quote span.-start {
-  //   top: -16px;
-  //   left: -58px;
-  // }
-
-  // .Medias__swiper-slide-content-quote span.-end {
-  //   position: relative;
-  //   top: 3px;
-  //   right: -14px;
-  // }
 
   .Medias__swiper-slide-content-name {
     margin-bottom: 16px;
