--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -851,6 +851,7 @@ body {
 @media only screen and (max-width: 768px) {
   #page-nosforets .Medias__swiper-slide-content-quote {
     font-size: 28px;
+    line-height: 1.1;
   }
 }
 
