--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -22,6 +22,17 @@ forceUrl = 0
                            <a target="_blank" href="http://partenaires.uneforetdepossibilites.com/en">{{ 'Partenaires'|_ }}</a>
                         {% endif %}
                     </div>
+                    <div class="header__secondary-links">
+                        <a href="https://facebook.com/uneforetdepossibilites/" target="_blank" class="Header__navigation-social">
+                            <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.instagram.com/uneforetdepossibilites/" target="_blank" class="Header__navigation-social">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.youtube.com/channel/UCF2sXehDojg9K6CSK8_VtrA" target="_blank" class="Header__navigation-social">
+                            <i class="fa fa-youtube-play" aria-hidden="true"></i>
+                        </a>
+                    </div>
                     <div class="header__social-menu">
                         <a href="https://www.facebook.com/uneforetdepossibilites" target="_blank">
                             <svg class="fb-icon" viewBox="0 0 1 1"><use xlink:href="#facebook" /></use></svg>
