--- a/themes/cifq/partials/site/header.htm
+++ b/themes/cifq/partials/site/header.htm
@@ -1,7 +1,7 @@
 [localePicker]
 forceUrl = 0
 ==
-<header class="header">
+<div class="header">
     <div class="container">
         <div class="row">
             <div class="grid-three-fourths grid-flip grid-" >
@@ -56,4 +56,4 @@ forceUrl = 0
         </div>
     </div>
     <div class="isMobile"></div>
-</header>
+</div>
