--- a/themes/cifq/assets/src/stylesheets/foret.scss
+++ b/themes/cifq/assets/src/stylesheets/foret.scss
@@ -112,6 +112,7 @@ body {
     font-family: 'Brandon', sans-serif;
     font-weight: 500;
     letter-spacing: 1.25px;
+    background: white;
 
     .nav{
       z-index: 9;
@@ -126,6 +127,10 @@ body {
           letter-spacing: normal;
           margin: 0;
           padding: 0;
+          @media screen and (max-width: 600px) {
+            font-size: 20px;
+            line-height: 1.2;
+          }
         }
       }
     }
@@ -155,6 +160,7 @@ body {
       background-attachment: fixed;
       font-size: 20px;
       overflow: hidden;
+      margin: 20px 20px 0;
 
       @media screen and (max-width: 1760px) {
         background-position: 70% 50%;
@@ -193,14 +199,12 @@ body {
           padding:30px;
           font-family: Plantin;
           letter-spacing: normal;
-        }
-
-        .intro{
-          @media screen and (max-width: $mobile-form-breakpoint) {
-            display: none;
+          @media screen and (max-width: 600px) {
+            width: 100%;
+            font-size: 16px;
+            padding: 24px;
           }
         }
-
       }
 
       .mouse-scroll{
@@ -374,6 +378,7 @@ body {
         font-size: 26px;
         line-height: 32px;
         z-index: 9;
+        position: relative;
 
         .arrow-down{
           position: absolute;
@@ -836,6 +841,13 @@ body {
     height: 931px;
     background-size: cover;
     background-position: 50% 50%;
+    @media screen and (min-width: 1024px) {
+      height: 100vh;
+      background-position: 75% 50%;
+      &.is-6 {
+        background-position: 25% 50%;
+      }
+    }
 
     @media screen and (max-width: $mobile-form-breakpoint) {
       height: calc(100vh - 60px);
@@ -858,10 +870,24 @@ body {
     padding-left: 180px;
     z-index: 1;
     letter-spacing: 1.5px;
-    @media only screen and (max-width:1024px) {
+    @media only screen and (min-width:1024px) {
       max-width: 70%;
       padding: 0;
       margin: 0 auto;
+      &.is-6 {
+        position: absolute;
+        right: 180px;
+        padding-left: 0;
+        text-align: right;
+        .Medias__swiper-slide-content-description {
+          float: right;
+        }
+        .Medias__swiper-slide-content-play {
+          position: absolute;
+          right: 0;
+          bottom: -70px;
+        }
+      }
     }
   }
 
