--- a/themes/cifq/assets/compiled/foret.css
+++ b/themes/cifq/assets/compiled/foret.css
@@ -891,7 +891,7 @@ body {
   background-position: 50% 50%;
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (max-width: 1024px) {
   #page-nosforets .Medias__swiper-slide {
     height: 100vh;
     background-position: 75% 50%;
@@ -922,6 +922,14 @@ body {
   padding-left: 180px;
   z-index: 1;
   letter-spacing: 1.5px;
+}
+
+@media only screen and (max-width: 1024px) {
+  #page-nosforets .Medias__swiper-slide-content {
+    max-width: 70%;
+    padding: 0;
+    margin: 0 auto;
+  }
 }
 
 @media only screen and (min-width: 1024px) {
